<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/background_gif"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textSize="36sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="32dp" android:background="@color/semi_transparent_garnet"/>

        <Button
                android:id="@+id/easy_button"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_button"
                android:layout_marginBottom="16dp" />

        <Button
                android:id="@+id/normal_button"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_button"
                android:layout_marginBottom="16dp" />

        <Button
                android:id="@+id/hard_button"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_button" android:layout_marginBottom="16dp"/>

        <Button
                android:id="@+id/very_hard_button"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_hard_button"
                android:layout_marginBottom="16dp"/>
        <Button
                android:id="@+id/extreme_button"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extreme_button" />

    </LinearLayout>

</FrameLayout>
