<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_with_image">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            tools:context=".MainActivity">

        <!-- Botones de Control de Música -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="6dp">

            <ImageButton
                    android:id="@+id/pause_play_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_media_pause"
                    android:contentDescription="@string/pause_play_button"/>

            <ImageButton
                    android:id="@+id/next_song_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_media_next"
                    android:contentDescription="@string/next_song_button"/>
        </LinearLayout>

        <!-- RecyclerView para mostrar la lista de imágenes de los personajes -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/character_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Spinner para seleccionar la pregunta -->
            <Spinner
                android:id="@+id/questions_spinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/spinner_background"
                android:entries="@array/questions"
                android:textColor="@color/spinner_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Botón para hacer la pregunta -->
            <Button
                android:id="@+id/ask_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ask_question" />

        </LinearLayout>

        <!-- LinearLayout para el botón de adivinar, el tiempo y la puntuación -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Botón para intentar adivinar el personaje -->
            <Button
                android:id="@+id/guess_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guess_character" />

            <!-- TextView para mostrar el tiempo restante -->
            <TextView
                android:id="@+id/timer_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:background="#BCFFFFFF"
                android:gravity="center"
                android:text="02:00"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- TextView para mostrar la puntuación -->
            <TextView
                android:id="@+id/score_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#BCFFFFFF"
                android:gravity="center"
                android:text="Score: 100"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/answer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="130dp"
        android:background="@color/semi_transparent_garnet"
        android:gravity="center"
        android:padding="8dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageView
            android:id="@+id/floating_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:visibility="gone"
            android:scaleType="centerInside"/>

</FrameLayout>